--- a/app.json
+++ b/app.json
@@ -1,13 +1,15 @@
 {
   "expo": {
+    "newArchEnabled": true,
     "name": "islam-app",
     "slug": "islam-app",
     "version": "1.0.0",
     "orientation": "portrait",
+    "scheme": "your-app-scheme",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/faithspherelogo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,6 +24,15 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router",
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
+      ]
+    ]
   }
 }
