--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "islam-app",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
+    "@craftzdog/react-native-buffer": "^6.0.5",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.10.2",
+    "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.8.4",
+    "babel-plugin-inline-import": "^3.0.0",
+    "bcryptjs": "^3.0.2",
+    "drizzle-orm": "^0.41.0",
+    "expo": "^52.0.11",
+    "expo-av": "~15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-document-picker": "~13.0.3",
+    "expo-drizzle-studio-plugin": "^0.1.2",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "^0.29.13",
+    "expo-sqlite": "^15.1.4",
+    "expo-status-bar": "~2.0.0",
+    "nativewind": "^2.0.11",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
+    "drizzle-kit": "^0.30.6",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
