Added auth apis, redesign namaz tariqa screen and some other UI changes in app

--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
         {
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
         }
-      ]
+      ],
+      "expo-secure-store"
     ]
   }
 }
