--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.10.2",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.8.4",
     "babel-plugin-inline-import": "^3.0.0",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "expo": "^52.0.11",
     "expo-av": "~15.0.1",
@@ -24,23 +25,31 @@
     "expo-document-picker": "~13.0.3",
     "expo-drizzle-studio-plugin": "^0.1.2",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.10",
     "expo-router": "~4.0.9",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.13",
     "expo-sqlite": "^15.1.4",
     "expo-status-bar": "~2.0.0",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-maps": "1.18.0",
     "react-native-picker-select": "^9.3.1",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "^15.10.1",
     "react-native-vector-icons": "^10.2.0",
-    "expo-secure-store": "~14.0.1",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-walkthrough-tooltip": "^1.6.0",
+    "tailwindcss": "3.4.17",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
