deployed the app

--- a/app.json
+++ b/app.json
@@ -20,7 +20,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.CAMERA"
+      ],
+      "package": "com.shahabali061.islamapp"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -49,6 +55,14 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "51917c17-1c89-49d8-8c7d-af4d6469b7c7"
+      }
+    }
   }
 }
